1.4 
- compatible with/requires jQuery 1.6 (#180)
- suppress checkbox generation for options with no text display (#169)

1.3
- change of licensing to explicitly state "MIT or GPL", rather than "MIT and GPL"
- copy styling from OPTION into generated checkbox and display text
- option for onItemClick (#162)
- handle firstItemChecksAll in refresh (#163)
- fix title attribute display to use raw text, not html, which allows html styling to
  apply to the empty text (#170, #171)

1.2 (qa)  NOTE that I never did release a non-qa variant of 1.2, and enough other
               changes went in that I decided to call it 1.3
- fix 'refrsh' when multiple option groups used (#161)
- changed positioning calculations (#147, #142, #138, #137, #127, #126, #119?? )
- added 'positionHow' option (#138, #137)
- added external 'close' function that can be called to close the pop-up (#137)
- added 'explicitClose' option (#129)
- fixed 'firstItemChecksAll' if only the first item is initially checked (#133)
- fixed ampersands within option text (#130)
- added 'zIndex' option (#92)

1.1
- updated jquery to 1.4.2, ui to 1.8.4 (which fixes the 'destroy' problem: #94, #114, #115, #121)
- if firstItemChecksAll is true and all items EXCEPT the first are checked, then autocheck the first (#62)
- treat maxDropHeight as a 'max', not as 'fixed' (#77)
- include simple vertical alignment css to try to address field positioning (#110)
- various key issues (#84)
  NOTE my approach for handling tabout via blur processing fails in IE7+ and Chrome due to loss of
  	   focus when user clicks in scrollbar.  blur processing has been disabled for now.
- assign ids to the generated elements for access by other jQuery processing, and keep the various ids
  unique (#97, #107, #111)
- copy the tabindex of the underlying select if provided (#100)
- provide option to auto-close dropdown when a singleton radio button is clicked (#57, #120)
- if optgroup is disabled, all child items are disabled (#72)